@@ -2,6 +2,8 @@ CHANGELOG
 =========
 
 * 1.2.x
+  * [BC break] Fonction Twig crud_display_config(CrudManager $crud, $modal = true, $ajax_options = array(), $image_url = 'ecr/images/i16/list.png')
+    remplacée par crud_display_config(CrudManager $crud, $options = array(), $ajax_options = array())
   * [BC break] Fonction Twig crud_th($column_id, CrudManager $crud, $th_options = array(), $ajax_options = array(), 
     $label = null, $image_up = 'ecr/images/i16/sort_incr.png', $image_down = 'ecr/images/i16/sort_decrease.png', 
     $attribute_page = '?') remplacée par crud_th($column_id, CrudManager $crud, $options = array(), $th_options = array(), $ajax_options = array())
